@@ -1,3 +1,10 @@
+2001-11-26  Matthias Clasen  <matthiasc@poet.de>
+
+	* glib/gtree.h: Mark g_tree_traverse() as deprecated. (#65343)
+	
+	* glib/gtree.c (g_tree_traverse): Explain the deprecation in 
+	some detail.
+
 Mon Nov 26 09:42:24 2001  Tim Janik  <timj@gtk.org>
 
 	* configure.in: provide GLIB_SIZEOF_SIZE_T.
