@@ -467,7 +467,10 @@ g_tree_foreach (GTree         *tree,
  * @user_data: user data to pass to the function.
  * 
  * Calls the given function for each node in the GTree. This function is
- * deprecated, use g_tree_foreach() instead.
+ * deprecated, since the order of a balanced tree is somewhat arbitrary.
+ * If you just want to visit all nodes in some order, use g_tree_foreach() 
+ * instead. If you really need to visit nodes in a specific order, consider
+ * using an <link linkend="glib-N-ary-Trees">N-ary Tree</link>.
  **/
 void
 g_tree_traverse (GTree         *tree,
